# znc

./: .gitignore  CMakeLists.txt
include/znc/: zncconfig.h.in
modules/: CMakeLists.txt
modules/modpython/: CMakeLists.txt
